Fix alignment of references section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -446,8 +446,8 @@ nav {
 }
 
 .citation {
-    text-align: center;
-    max-width: 80%;
+    margin: 20px;
+    margin-left: 30px;
 }
 
 .citationAuthors {
